--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@studio-freight/lenis": "^1.0.42",
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "jquery": "^3.7.1"
   }
 }
