--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@studio-freight/lenis": "^1.0.42",
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "parallax-js": "^3.1.0"
   }
 }
